--- a/src/components/ListPage.css
+++ b/src/components/ListPage.css
@@ -1,3 +1,13 @@
+.sort-area .sort-btn {
+    width: 100px;
+    border: 2px solid #CBD2E0;
+    border-radius: 6px;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    cursor: pointer;
+}
 .sort-list {
     display: flex;
     flex-direction: column;
@@ -15,7 +25,8 @@
 
 .card-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    place-items: center;
     gap: 50px;
     width: 80%;
 }
