--- a/src/components/views/Login.css
+++ b/src/components/views/Login.css
@@ -9,8 +9,9 @@
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 1075px; /* 너비를 1075px로 확장 */
+    width: 40%;
+    min-width: 300px;
+    max-width: 500px;
     box-sizing: border-box;
     margin: 0 auto;
   }
@@ -60,10 +61,6 @@
     border-radius: 4px;
     font-size: 1rem;
     cursor: pointer;
-  }
-  
-  .google-icon {
-    margin-right: 0.5rem;
   }
   
   .signup-link {
