--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,24 @@
 html {
   height: 100%;
 }
-
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 #root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-
-  flex-direction: 'column';
-  width:'100%';
-  min-height: '100%';
 }
