--- a/src/components/Layout/Footer.css
+++ b/src/components/Layout/Footer.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 24px 0;
+    padding: 1.3rem 0;
 
     width: 100%;
     height: fit-content;
