--- a/src/components/scrapList/scrapList.css
+++ b/src/components/scrapList/scrapList.css
@@ -1,110 +1,8 @@
-/* .main-layout {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    font-family: 'Arial', sans-serif;
-  }
-  
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: linear-gradient(to right, #00d2ff, #3a7bd5);
-    padding: 10px 20px;
-    color: white;
-  }
-  
-  .logo {
-    font-size: 1.5em;
-    font-weight: bold;
-  }
-  
-  .user-icon {
-    font-size: 1.5em;
-  }
-  
-  .content {
-    flex-grow: 1;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .icons {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    max-width: 600px;
-    margin-bottom: 30px;
-  }
-  
-  .icon {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #6a6a6a;
-  }
-  
-  .icon span {
-    font-size: 2em;
-  }
-  
-  .icon p {
-    margin-top: 10px;
-    font-size: 1em;
-    color: #6a6a6a;
-  }
-  
-  .folders {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    max-width: 800px;
-  }
-  
-  .folder {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #333;
-  }
-  
-  .folder span {
-    font-size: 3em;
-  }
-  
-  .folder p {
-    margin-top: 10px;
-    font-size: 1.2em;
-    color: #333;
-  }
-  
-  .footer {
-    background-color: #f1f1f1;
-    text-align: center;
-    padding: 10px 0;
-    color: #888;
-  }
-   */
-
-   /* 기본 레이아웃 스타일 */
 .main-layout {
     display: flex;
     flex-direction: column;
     height: 100vh;
     font-family: 'Arial', sans-serif;
-}
-
-/* Header 스타일 */
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: linear-gradient(to right, #00d2ff, #3a7bd5);
-    padding: 10px 20px;
-    color: white;
 }
 
 .logo {
@@ -118,7 +16,6 @@
 
 /* Content 스타일 */
 .content {
-    flex-grow: 1;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -151,11 +48,6 @@
     font-size: 1em;
     color: #6a6a6a;
 }
-
-.folders a {
-    text-decoration: none; 
-    color: inherit; 
-}
 .folders {
     display: flex;
     justify-content: space-between; 
@@ -171,23 +63,23 @@
     justify-content: center;
     color: #333;
     text-align: center; 
-    margin: 0 10px; 
+    margin: 0 10px;
+    padding: 0 0.5rem;
+    border-radius: 10px;
+    cursor: pointer;
 }
-
+.folder:hover, .folder.selected{
+  background-color: #e4e4e4;
+}
+.folder p {
+  margin-top: 10px;
+  font-size: 1.2em;
+  color: #333;
+}
+.folder a {
+  text-decoration: none; 
+  color: inherit; 
+}
 .folder span {
     font-size: 3em;
-}
-
-.folder p {
-    margin-top: 10px;
-    font-size: 1.2em;
-    color: #333;
-}
-
-/* Footer 스타일 */
-.footer {
-    background-color: #f1f1f1;
-    text-align: center;
-    padding: 10px 0;
-    color: #888;
 }
