--- a/src/components/scrapList/scrapDetail/scrapDetail.css
+++ b/src/components/scrapList/scrapDetail/scrapDetail.css
@@ -1,52 +1,55 @@
-/* .scrapped-posts-container {
-    padding: 20px;
-    margin-top: 40px;
-  }
-  
-  .scrapped-posts-container h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .scrapped-posts-list {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .scrapped-post {
-    display: flex;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .scrapped-post-image {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border-radius: 8px;
-    margin-right: 20px;
-  }
-  
-  .scrapped-post-content {
-    flex: 1;
-  }
-  
-  .scrapped-post-title {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .scrapped-post-likes {
-    font-size: 16px;
-    color: #ef476f;
-    margin-bottom: 10px;
-  }
-  
-  .scrapped-post-description {
-    font-size: 16px;
-    color: #333;
-  } */
+.scraped-post {
+  display: flex;
+  flex-direction: row;
+  margin: 1.5rem 0;
+  padding: 1.5rem;
+  width: 100%;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.scraped-post:hover {
+  background-color: #e4e4e4;
+}
+.scraped-post .scraped-post-image {
+  min-width: 20rem;
+  max-width: 25rem;
+  min-height: 16rem;
+  max-height: 25rem;
+  border-radius: 5px;
+  margin-right: 2rem;
+}
+
+.scraped-post-content {
+  padding: 1rem;
+}
+.scraped-post-content h2 {
+  margin-top: 0;
+}
+.scraped-post-content .scraped-post-icons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.scraped-post-content .scraped-post-icons span {
+  margin-right: 0.1rem;
+}
+.scraped-post-content .scraped-post-icons img {
+  margin-right: 0.5rem;
+  width: 1.7rem;
+}
+.scraped-post-content .scraped-post-icons .robot {
+  width: 2rem;
+}
+
+.scraped-post-content .description{
+  margin-top: 1.2rem;
+  line-height: 1.5rem;
+  max-width: 20rem;
+}
+
+.scraped-post-container .divider {
+  width: 100%;
+  height: 2px;
+  background: #E6E8EC;
+  margin: 3px 0;
+}
