--- a/src/components/Layout/Header.css
+++ b/src/components/Layout/Header.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 60px;
+    padding: 1rem 4rem;
 
     box-sizing: border-box;
     width: 100%;
