Until main lists(not cards)

--- a/src/components/views/ListPage.css
+++ b/src/components/views/ListPage.css
@@ -1,6 +1,6 @@
 .sort-area .sort-btn {
     width: 100px;
-    border: 2px solid #CBD2E0;
+    border: 2px solid;
     border-radius: 6px;
     padding: 10px;
     display: flex;
