--- a/src/components/myList/scrapList.css
+++ b/src/components/myList/scrapList.css
@@ -62,7 +62,7 @@
     align-items: center;
     justify-content: center;
     text-align: center; 
-    margin: 0 10px;
+    margin: 0 2rem;
     padding: 0 0.5rem;
     border-radius: 10px;
     cursor: pointer;
